REACT_APPS_NAVIGATION_BAR_TITLE = "React Applications" ;
HYBRID_CONTENT_NAVIGATION_BAR_TITLE = "Hybrid Content" ;
PLAYBOOK_NAVIGATION_BAR_TITLE = "Sportsbook" ;
INTRO_NAVIGATION_BAR_TITLE = "Intro" ;
